css: fix: adjusted media queries to prevent overlap and ensure correct styling for mobile and tablet views.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -220,7 +220,7 @@ footer:hover {
 }
 
 /* Larger Screens*/
-@media (max-width: 1024px) {
+@media (min-width: 769px) and (max-width: 1024px) {
     .wrapper {
         padding: 60px;
     }
